# AI-Agents

./: .gitignore  index.js  indexx.js  package.json
AI_TODO/: docker-compose.yaml  package.json
AI_TODO/db/: schema.js
AI_Teacher/: index.html  index.js  package.json
AI_Ticket_Assistant/Backend/: index.js  package.json
AI_Ticket_Assistant/Backend/controllers/: ticket.js  user.js
AI_Ticket_Assistant/Backend/inngest/functions/: on-signup.js  (+1 more)
AI_Ticket_Assistant/Backend/middlewares/: auth.js
AI_Ticket_Assistant/Backend/models/: ticket.js  user.js
AI_Ticket_Assistant/Backend/routes/: ticket.js  user.js
AI_Ticket_Assistant/Backend/utils/: agent.js  mailer.js
AI_Ticket_Assistant/Frontend/: index.html  package-lock.json  package.json
AI_Ticket_Assistant/Frontend/src/: main.jsx
Calculator_Agent/: index.js  package.json
ChatBot_RAG/: main.py  pyproject.toml
ChatBot_RAG/faiss_index/: index.faiss  index.pkl
Chat_Resume/client/: package.json
Chat_Resume/client/app/: globals.css  layout.tsx  page.tsx
Chat_Resume/server/: index.js  package.json  worker.js
Cursor_IDE/: index.html  index.js  package.json
Cursor_IDE/todo-app/: index.html  script.js  style.css  styles.css
Cursor_IDE/weather-app/: index.html  script.js  style.css
Smart_Bulb/: package.json
Smart_Bulb/src/: index.ts  service.ts
Smart_Data_Mapper/: main.py  pyproject.toml
Streamlit-App/: main.py  pyproject.toml
Streamlit-App/.streamlit/: secrets.toml
Talk_To_DB/: Info.txt  docker-compose.yml  main.py  pyproject.toml
WebPage_Support_Agent/: index.js  package.json
(+7 files in other folders)
